--- a/index.html
+++ b/index.html
@@ -406,9 +406,9 @@ counterID=setInterval(counterUpdate, 2500)
 
 <div class="roundedImage"> 
 
-    <img class="element" width="100" height="100" data-toggle="tooltip" src="lepen.png" data-placement="left" alt="Marine Le Pen" title="Marine Le Pen" style="border:2px #e48400 solid; margin-left:15px; "/>
+    <img class="element" width="100" height="100" data-toggle="tooltip" src="lepen.png" data-placement="left" alt="Marine Le Pen" title="Marine Le Pen" style="border:2px #0f52ba solid; margin-left:15px; "/>
 
-	<div class="element2"> <p class="triangle-right  left2" width="100" style="font-style: italic;">200 000 étrangers légaux entrent chaque année en France depuis 10 ans, et à peu près autant pour les
+	<div class="element2"> <p class="triangle-right  left4" width="100" style="font-style: italic;">200 000 étrangers légaux entrent chaque année en France depuis 10 ans, et à peu près autant pour les
 
 illégaux.
 
@@ -417,20 +417,20 @@ illégaux.
 
 </div>
 
-<div class="devrait1" style='background-color: transparent;border:3px solid #e48400; text-align: justify;text-justify: inter-word;'> Il est vrai que depuis 2004, 200 000 étrangers entrent légalement en France chaque année. Cependant, du fait des décès et des départs, la population immigrée en France ne croit que de 90 000 personnes par an. De plus, Marine Le Pen le dit pas que rapportée à la population française, ce chiffre est le plus faible d'Europe. Enfin, il n'existe aucun chiffre fiable sur le nombre d'étrangers en situation irrégulière en France et les seules estimations faite oscillent entre 10 000 et 100 000.
+<div class="devrait1" style='background-color: transparent;border:3px solid #0f52ba ; text-align: justify;text-justify: inter-word;'> Il est vrai que depuis 2004, 200 000 étrangers entrent légalement en France chaque année. Cependant, du fait des décès et des départs, la population immigrée en France ne croit que de 90 000 personnes par an. De plus, Marine Le Pen le dit pas que rapportée à la population française, ce chiffre est le plus faible d'Europe. Enfin, il n'existe aucun chiffre fiable sur le nombre d'étrangers en situation irrégulière en France et les seules estimations faite oscillent entre 10 000 et 100 000.
 </div>
 </div>
 
 <div class="gen">
 
 <div class="roundedImage"> 
-    <img class="element" width="100" height="100" data-toggle="tooltip" data-placement="left" title="François Fillon" src="fillon.png" alt="" style="border:2px #d1e231 solid; margin-left:15px; "/>
-	<div class="element2"> <p class="triangle-right left" style="font-style: italic;">Une partie [des demandeurs d’asile] fuient la guerre en Syrie mais l’immense majorité de ces hommes et femmes fuient la pauvreté et viennent de toutes les régions du monde.
+    <img class="element" width="100" height="100" data-toggle="tooltip" data-placement="left" title="François Fillon" src="fillon.png" alt="" style="border:2px #009688 solid; margin-left:15px; "/>
+	<div class="element2"> <p class="triangle-right left3" style="font-style: italic;">Une partie [des demandeurs d’asile] fuient la guerre en Syrie mais l’immense majorité de ces hommes et femmes fuient la pauvreté et viennent de toutes les régions du monde.
 </p> </div>
 
 </div>
 		
-<div class="devrait1" style="background-color:  transparent; border:3px solid #d1e231;text-align: justify;text-justify: inter-word;">Une telle affirmation est fausse. En 2015, selon les chiffres d’Eurostat, plus de la moitié des demandeurs d’asile venaient de pays en guerre.
+<div class="devrait1" style="background-color:  transparent; border:3px solid #009688;text-align: justify;text-justify: inter-word;">Une telle affirmation est fausse. En 2015, selon les chiffres d’Eurostat, plus de la moitié des demandeurs d’asile venaient de pays en guerre.
 </div>
 </div>
 		
@@ -454,14 +454,14 @@ illégaux.
 <div class="gen">
 
 <div class="roundedImage" > 
-    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Benoit Hamon" src="hamon.png" alt="" style="border:2px #009688 solid; margin-left:15px;  "/>
-  <div class="element2"> <p class="triangle-right left3 " style="font-style: italic;">S’il y a 200 000 entrées légales d’immigrés en France par an, il y en a plus de 150 000 qui repartent. Nous avons aujourd’hui un solde migratoire qui doit être entre 50 000 et 70 000 personnes.
+    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Benoit Hamon" src="hamon.png" alt="" style="border:2px  #d1e231 solid; margin-left:15px;  "/>
+  <div class="element2"> <p class="triangle-right left " style="font-style: italic;">S’il y a 200 000 entrées légales d’immigrés en France par an, il y en a plus de 150 000 qui repartent. Nous avons aujourd’hui un solde migratoire qui doit être entre 50 000 et 70 000 personnes.
 </p> </div>
 
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent;border:3px solid #009688;text-align: justify;text-justify: inter-word; "> Le chiffre donné par B. Hamon sur le solde migratoire est en partie exact. Mais, il mélange les arrivées et les départs d'individus français ou non. Si l'on ne s'intéresse qu'aux immigrés, qui étaient au coeur du débat, le solde migratoire en France est en fait de 140 000, soit une différence considérable avec le chiffre avancé par B. Hamon.
+<div class="devrait1" style="background-color:  transparent;border:3px solid #d1e231;text-align: justify;text-justify: inter-word; "> Le chiffre donné par B. Hamon sur le solde migratoire est en partie exact. Mais, il mélange les arrivées et les départs d'individus français ou non. Si l'on ne s'intéresse qu'aux immigrés, qui étaient au coeur du débat, le solde migratoire en France est en fait de 140 000, soit une différence considérable avec le chiffre avancé par B. Hamon.
 </div>
 </div>
 	
@@ -470,15 +470,15 @@ illégaux.
 <div class="gen">
 
 <div class="roundedImage" > 
-    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Jean-Luc Mélenchon" src="melenchon.png" alt="" style="border:2px #0f52ba solid; margin-left:15px;  "/>
-  <div class="element2"> <p class="triangle-right left4" style="font-style: italic;">L’immigration est un exil forcé.
+    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Jean-Luc Mélenchon" src="melenchon.png" alt="" style="border:2px  #e48400 solid; margin-left:15px;  "/>
+  <div class="element2"> <p class="triangle-right left2" style="font-style: italic;">L’immigration est un exil forcé.
 
 </p> </div>
 
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent; border:3px solid #0f52ba;text-align: justify;text-justify: inter-word;"> Jean-Luc Mélenchon : à compléter
+<div class="devrait1" style="background-color:  transparent; border:3px solid #e48400;text-align: justify;text-justify: inter-word;"> Jean-Luc Mélenchon : à compléter
 </div>
 </div>
 	</div>
