--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@ $(document).ready(function(){
 		</div>
 		<h1 style="color:#004953"> Quizz </h1>
 
-		<div class="container">
+		<div class="container" style="width:100%;">
 		 <div id="frame" role="content"></div> 
 		</div>
 	</section>
