--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@ $(document).ready(function(){
 		</div>
 		<h1 style="color:#004953"> Quizz </h1>
 
-		<div class="container" style="width:100%;">
+		<div class="container">
 		 <div id="frame" role="content"></div> 
 		</div>
 	</section>
@@ -519,7 +519,7 @@ $(document).ready(function(){
 
 		<h1 style="color:#004953"> Les initiatives que nous avons retenues </h1>
 		
-		<div id="mainBubble" class="container">
+		<div id="mainBubble" class="container" style="width:100%;">
 		<svg class="mainBubbleSVG" width="1250" height="1200"><text id="bubbleItemNote" x="10" y="390.16001" font-size="18" dominant-baseline="middle" alignment-baseline="middle" style="fill: black;"></text></svg></div>
 			<script script type="text/javascript"> 
 			   var w = window.innerWidth * 0.9 * 0.95;
