--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 		
 			<h2> Focus sur la demande d'asile </h2>
 <h3> Statut et durée du titre de séjour </h3> 
-<div class="container" style="display:flex;justify-content:space-between;">
+<div class="container" style="display:flex;justify-content:space-between;flex-direction:row;flex-wrap:wrap;">
 	
 <div style="color:#004953;  width: 50%;text-align: justify;text-justify: inter-word;"> <br>
 		Un demandeur d'asile dont la demande est acceptée n'obtient pas nécessairement le statut de réfugié. Il existe deux autres statuts. <br>
@@ -220,12 +220,12 @@
 </div>
 <div style="diplay:flex;flex-direction:column; align-self:center;">
 <div> <font color="#24292E"> Décisions en première instance relatives aux demandes d'asile en UE (de ressortissants de pays tiers), 2015 </font> </div>
-	<div id="alienor">
+	<div id="alienor" style="min-width:200px;">
 </div>
 <div> <font size="-1" color="white"> Source: Eurostat </font> </div>
 	</div>
 			</div>
-		</section> 
+		<!-- </section> -->
 
 
 	<!-- Deuxième partie -->
