--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 						 </font> </section>
 					</div>
 				</div>
-			<!-- </section> -->
+			 </section> 
 
 			
 				<!-- <div style="color:#004953; text-align: justify;text-justify: inter-word;">  <br>
