--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 <h3> Statut et durée du titre de séjour </h3> 
 <div class="container" style="display:flex;justify-content:space-between;flex-direction:row;flex-wrap:wrap;">
 	
-<div style="color:#004953;  width: 50%;text-align: justify;text-justify: inter-word;"> <br>
+<div class="modifmobil" style="color:#004953;  width: 50%;text-align: justify;text-justify: inter-word;"> <br>
 		Un demandeur d'asile dont la demande est acceptée n'obtient pas nécessairement le statut de réfugié. Il existe deux autres statuts. <br>
 		<br>
 		Les personnes reconnues <b style="font-weight:bold ; color: #29AB87" > réfugiées </b> en France bénéficient d'une carte de résident valable <b style="font-weight:bold ; color: #29AB87" > dix ans</b>. <br>
@@ -402,7 +402,7 @@ counterID=setInterval(counterUpdate, 2500)
 </div>
 
 -->
-<div class="gen">
+<div class="gen" style="width:100%;">
 
 <div class="roundedImage"> 
 
@@ -421,7 +421,7 @@ illégaux.
 </div>
 </div>
 
-<div class="gen">
+<div class="gen" style="width:100%;">
 
 <div class="roundedImage"> 
     <img class="element" width="100" height="100" data-toggle="tooltip" data-placement="left" title="François Fillon" src="fillon.png" alt="" style="border:2px #009688 solid; margin-left:15px; "/>
@@ -435,7 +435,7 @@ illégaux.
 </div>
 		
 <!-- Macron -->
-<div class="gen">
+<div class="gen" style="width:100%;">
 
 <div class="roundedImage" > 
     <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Emmanuel Macron" src="macron.png" alt="" style="border:2px #933d41 solid; margin-left:15px;  "/>
@@ -451,7 +451,7 @@ illégaux.
 </div>
 	
 <!-- Hamon -->
-<div class="gen">
+<div class="gen" style="width:100%;">
 
 <div class="roundedImage" > 
     <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Benoit Hamon" src="hamon.png" alt="" style="border:2px  #d1e231 solid; margin-left:15px;  "/>
@@ -467,7 +467,7 @@ illégaux.
 	
 <!-- Mélenchon -->
 	
-<div class="gen">
+<div class="gen" style="width:100%;">
 
 <div class="roundedImage" > 
     <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Jean-Luc Mélenchon" src="melenchon.png" alt="" style="border:2px  #e48400 solid; margin-left:15px;  "/>
@@ -517,7 +517,7 @@ $(document).ready(function(){
 		<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 		</div>
 
-		<h1 style="color:#004953"> Les initiatives que nous avons retenues </h1>
+		<h1 class="dropmobil" style="color:#004953"> Les initiatives que nous avons retenues </h1>
 		
 		<div id="mainBubble" class="container" style="width:100%;">
 		<svg class="mainBubbleSVG" width="1250" height="1200"><text id="bubbleItemNote" x="10" y="390.16001" font-size="18" dominant-baseline="middle" alignment-baseline="middle" style="fill: black;"></text></svg></div>
