--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
 		
 			<h2> Focus sur la demande d'asile </h2>
 <h3> Statut et durée du titre de séjour </h3> 
-<div class="container" style="display:flex;justify-content:space-between;flex-direction:row;flex-wrap:wrap;">
+<div class="container" style="display:flex;justify-content:space-between;">
 	
-<div class="modifmobil" style="color:#004953;  width: 50%;text-align: justify;text-justify: inter-word;"> <br>
+<div style="color:#004953;  width: 50%;text-align: justify;text-justify: inter-word;"> <br>
 		Un demandeur d'asile dont la demande est acceptée n'obtient pas nécessairement le statut de réfugié. Il existe deux autres statuts. <br>
 		<br>
 		Les personnes reconnues <b style="font-weight:bold ; color: #29AB87" > réfugiées </b> en France bénéficient d'une carte de résident valable <b style="font-weight:bold ; color: #29AB87" > dix ans</b>. <br>
@@ -218,9 +218,9 @@
 		Le <b style="font-weight:bold ; color:  #E48400" > statut humanitaire </b> peut également être conféré dans des cas de risque d'atteinte grave ou encore en cas 
 		de maladie mais il dépend de la législation nationale et non du droit de l'Union, contrairement aux deux autres statuts.  
 </div>
-<div style="diplay:flex;flex-direction:column; align-self:center;">
+<div style="display:flex;flex-direction:column; align-self:center;">
 <div> <font color="#24292E"> Décisions en première instance relatives aux demandes d'asile en UE (de ressortissants de pays tiers), 2015 </font> </div>
-	<div id="alienor" style="min-width:200px;">
+	<div id="alienor">
 </div>
 <div> <font size="-1" color="white"> Source: Eurostat </font> </div>
 	</div>
