--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
 					<!--  </ul> 
 				</div>
 			</div> -->
-		
+		<center>
 			<h2> Focus sur la demande d'asile </h2>
-<h3> Statut et durée du titre de séjour </h3> 
+			<h3> Statut et durée du titre de séjour </h3> </center> 
 <div class="container" style="display:flex;justify-content:space-between;">
 	
 <div style="color:#004953;  width: 50%;text-align: justify;text-justify: inter-word;"> <br>
@@ -218,7 +218,7 @@
 		Le <b style="font-weight:bold ; color:  #E48400" > statut humanitaire </b> peut également être conféré dans des cas de risque d'atteinte grave ou encore en cas 
 		de maladie mais il dépend de la législation nationale et non du droit de l'Union, contrairement aux deux autres statuts.  
 </div>
-<div style="display:flex;flex-direction:column; align-self:center;">
+<div style="diplay:flex;flex-direction:column; align-self:center;">
 <div> <font color="#24292E"> Décisions en première instance relatives aux demandes d'asile en UE (de ressortissants de pays tiers), 2015 </font> </div>
 	<div id="alienor">
 </div>
