--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 						 </font> </section>
 					</div>
 				</div>
-			 </section> 
+			<!-- </section> -->
 
 			
 				<!-- <div style="color:#004953; text-align: justify;text-justify: inter-word;">  <br>
@@ -202,9 +202,8 @@
 					<!--  </ul> 
 				</div>
 			</div> -->
-		<center>
 			<h2> Focus sur la demande d'asile </h2>
-			<h3> Statut et durée du titre de séjour </h3> </center> 
+			<h3> Statut et durée du titre de séjour </h3>
 <div class="container" style="display:flex;justify-content:space-between;">
 	
 <div style="color:#004953;  width: 50%;text-align: justify;text-justify: inter-word;"> <br>
@@ -225,7 +224,7 @@
 <div> <font size="-1" color="white"> Source: Eurostat </font> </div>
 	</div>
 			</div>
-		<!-- </section> -->
+</section> 
 
 
 	<!-- Deuxième partie -->
