--- a/index.html
+++ b/index.html
@@ -284,6 +284,8 @@
 <iframe src="https://www.preceden.com/timelines/301802/embed" scrolling="no" width="100%" height="550" frameborder="0">
  <a href="https://www.preceden.com" target="_top">Preceden Timeline Maker</a>
 </iframe>
+	<div style="color:black; text-align: justify;text-justify: inter-word;">
+		<font size="-1"> Passez votre souris sur les événements pour en savoir plus.</font>
 </div>			
 </section>
 		<!-- Carte Adeline -->
@@ -519,7 +521,7 @@ $(document).ready(function(){
 		<h1 class="dropmobil" style="color:#004953"> Les initiatives que nous avons retenues </h1>
 		
 		<div id="mainBubble" class="container" style="width:100%;">
-		<svg class="mainBubbleSVG" width="1250" height="1200"><text id="bubbleItemNote" x="10" y="390.16001" font-size="18" dominant-baseline="middle" alignment-baseline="middle" style="fill: black;"></text></svg></div>
+		<svg class="mainBubbleSVG" width="1250" height="1200"><text id="bubbleItemNote" x="10" y="400" font-size="18" dominant-baseline="middle" alignment-baseline="middle" style="fill: black;"></text></svg></div>
 			<script script type="text/javascript"> 
 			   var w = window.innerWidth * 0.9 * 0.95;
    var h = Math.ceil(w * 0.7);
