--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 	ont plaidé pour l'utilisation du terme "réfugié". En effet, le mot "migrant" est un terme générique qui désigne une personne qui migre, que ce soit pour des raisons économiques
 	ou politiques, alors que le mot "réfugié" renvoie à une migration politique pour cause de conflit notamment, et, <i> in fine </i>, fait référence au droit d'asile. <br>
 	<br> 
-	<p> La distinction entre réfugié, migrant et demandeur d'asile est essentielle : les gouvernements ont des responsabilités
+	<p> La distinction entre réfugié et migrant est essentielle : les gouvernements ont des responsabilités
 	différentes envers chacun. En effet, les pays gèrent les migrants en vertu de leurs propres lois et procédures en matière 
 	d’immigration. En revanche,<!-- les réfugiés sont gérés en vertu des normes sur la protection des réfugiés et de l’asile aux 
 	réfugiés qui sont définies dans les lois nationales et les lois internationales.--> le terme réfugié est défini par la législation internationale : la Convention de Genève de 1951 interdit de refouler des
