--- a/index.html
+++ b/index.html
@@ -284,7 +284,8 @@
 <iframe src="https://www.preceden.com/timelines/301802/embed" scrolling="no" width="100%" height="550" frameborder="0">
  <a href="https://www.preceden.com" target="_top">Preceden Timeline Maker</a>
 </iframe>
-	<div style="color:black; text-align: justify;text-justify: inter-word;">
+	
+	<div style="color:black; text-align: center;text-justify: inter-word;">
 		<font size="-1"> Passez votre souris sur les événements pour en savoir plus.</font>
 </div>			
 </section>
