--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 				<!-- <div class="container"> -->
 								<h2>Réfugiés, demandeurs d'asile, déplacés internes... les mots comptent. </h2>
 
-						<div style="display:flex;flex-direction:column; text-align: justify;text-justify: inter-word;">
+						<div style="display:flex;flex-direction:column;width: 100%; text-align: justify;text-justify: inter-word;">
 				<div class="row 150%" >	
 						<section class="4u 12u$(small)" style ="text-justify: inter-word" >
 							<center> <i class="icon big rounded fa fa-bomb"></i> </center>
@@ -208,7 +208,7 @@
 			<h3> Statut et durée du titre de séjour </h3>
 <div class="container" style="display:flex;justify-content:space-between;">
 	
-<div style="color:#004953;  width: 60%;text-align: justify;text-justify: inter-word;"> <br>
+<div style="color:#004953;  width: 55%;text-align: justify;text-justify: inter-word;"> <br>
 		Un demandeur d'asile dont la demande est acceptée n'obtient pas nécessairement le statut de réfugié. Il existe deux autres statuts. <br>
 		<br>
 		Les personnes reconnues <b style="font-weight:bold ; color: #29AB87" > réfugiées </b> en France bénéficient d'une carte de résident valable <b style="font-weight:bold ; color: #29AB87" > dix ans</b>. <br>
