--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 				<!-- <div class="container"> -->
 								<h2>Réfugiés, demandeurs d'asile, déplacés internes... les mots comptent. </h2>
 
-						<div style="display:flex;flex-direction:column;width: 80%; text-align: justify;text-justify: inter-word;">
+						<div style="display:flex;flex-direction:column; text-align: center;text-justify: inter-word;">
 				<div class="row 150%" >	
 						<section class="4u 12u$(small)" style ="text-justify: inter-word" >
 							<center> <i class="icon big rounded fa fa-bomb"></i> </center>
