--- a/index.html
+++ b/index.html
@@ -134,7 +134,40 @@
 			<br>
 					
 			
-			<!-- <section id="menu" class="wrapper style1 align-center"> -->
+			
+			<!-- </section> -->
+		
+				<!-- <div style="color:#004953; text-align: justify;text-justify: inter-word;">  <br>
+					<ul>
+					<li><b>Un réfugié </b> est une personne qui se trouve hors du pays dont elle a la nationalité ou dans lequel elle a sa résidence habituelle, et qui “du fait de sa race, de sa religion, de sa nationalité, de son appartenance à un groupe social déterminé ou de ses opinions politiques craint avec raison d’être persécutée et ne peut se réclamer de la protection de ce pays ou en raison de ladite crainte ne peut y retourner”. <!-- [[[Le terme réfugié est défini par la législation internationale : la Convention de Genève de 1951 interdit de refouler des réfugiés dans un pays où leur vie est en danger. Cette convention a été ratifiée par 145 membres des Nations unies, dont tous les pays de l’Union européenne.]]] -->
+				<!-- 	</li>
+					<li> Est considéré comme <b>“migrant”</b>, toute personne née dans un pays et qui vit dans un autre pour une durée égale ou supérieure à un an, que ce soit par choix, par nécessité ou contrainte. Un “migrant” n’est pas un statut juridique mais une catégorie générale à laquelle appartiennent notamment les réfugiés, mais aussi les étudiants étrangers ou les travailleurs venus d’un autre pays. 
+					</li>
+					<li> Un réfugié est un ancien <b>demandeur d’asile</b> mais tous les demandeurs d’asile ne sont pas reconnus réfugiés (dans ce cas, ils sont qualifiés de “<b>déboutés </b>”). En France, le demandeur d’asile n’a pas le droit de travailler, sauf si l’examen de sa demande dépasse une année. Le statut de réfugié permet, lui, d’obtenir un permis de séjour de dix ans et de travailler normalement. 
+					</li>
+					<li> Contrairement aux réfugiés, les <b>déplacés internes</b> n’ont pas traversé de frontière internationale pour chercher asile dans un autre pays. Même s’ils ont fui pour des raisons similaires à celle des réfugiés (conflit armé, violence généralisée..) les déplacés internes demeurent légalement sous la protection de leur propre gouvernement, constituant parfois lui-même la cause de leur fuite. 
+					</li>
+<!-- Pour les gouvernements, cette distinction est importante. Les pays gèrent les migrants en vertu de leurs propres lois et procédures en matière d’immigration. Les pays gèrent les réfugiés en vertu des normes sur la protection des réfugiés et de l’asile aux réfugiés qui sont définies dans les lois nationales et les lois internationales. Les pays ont des responsabilités précises envers les demandeurs d’asile sur leurs territoires et à leurs frontières.]]]
+				<br>
+<li><b>Déplacé interne </b>: Contrairement aux réfugiés, les déplacés internes n’ont pas traversé de frontière internationale pour chercher asile dans un autre pays. Même s’ils ont fui pour des raisons similaires à celle des réfugiés (conflit armé, violence généralisée..) les déplacés internes demeurent légalement sous la protection de leur propre gouvernement, constituant parfois lui-même la cause de leur fuite. [[[En tant que citoyens, les déplacés internes conservent l’ensemble de leurs droits, dont celui à la protection en vertu des droits humains et des principe du droit international humanitaire.]]] </li> -->
+					<!--  </ul> 
+				</div>
+			</div> -->
+	<!-- Graphe intro Irène -->
+			<h2> Éclairage sur la situation mondiale en un graphique </h2>	
+		<div class="container" style="display:flex;flex-direction:column;">
+			<div style="display:flex;flex-direction:column; text-align: center">
+				<h4> <font color="#24292E"> Une explosion du nombre de populations déracinées dans le monde depuis 15 ans</font> </h4>
+				<br> <font color="#24292E">Depuis 2006, il y a plus de déplacés internes que de réfugiés.</font>
+				<font color="#24292E"> Il y a trois fois plus de demandeurs d'asile depuis 2012. </font>
+				<div id="container" > </div>
+				<div style="display:flex;flex-direction:column; text-align: justify">
+					<font size="-1"><center> Source: UNHCR <br>
+					Cliquez sur la légende pour voir le changement d'échelles. </center> </font>
+<br>
+				</div>		
+			
+		<!-- <section id="menu" class="wrapper style1 align-center"> -->
 				<!-- <div class="container"> -->
 								<h2>Réfugiés, demandeurs d'asile, déplacés internes... les mots comptent. </h2>
 
@@ -169,56 +202,40 @@
 						<font color="#24292E"> 	<p style="text-align: justify;text-justify: inter-word;color:#004953; ">Contrairement aux réfugiés, les <b style="font-weight:bold ; color:#d7837f">déplacés internes</b> n’ont pas traversé de frontière internationale pour chercher asile dans un autre pays. Même s’ils ont fui pour des raisons similaires à celle des réfugiés (conflit armé, violence généralisée..) les déplacés internes demeurent légalement sous la protection de leur propre gouvernement, constituant parfois lui-même la cause de leur fuite. </p>
 						 </font> </section>
 					</div>
-				</div>
-			<!-- </section> -->
-
-			
-				<!-- <div style="color:#004953; text-align: justify;text-justify: inter-word;">  <br>
-					<ul>
-					<li><b>Un réfugié </b> est une personne qui se trouve hors du pays dont elle a la nationalité ou dans lequel elle a sa résidence habituelle, et qui “du fait de sa race, de sa religion, de sa nationalité, de son appartenance à un groupe social déterminé ou de ses opinions politiques craint avec raison d’être persécutée et ne peut se réclamer de la protection de ce pays ou en raison de ladite crainte ne peut y retourner”. <!-- [[[Le terme réfugié est défini par la législation internationale : la Convention de Genève de 1951 interdit de refouler des réfugiés dans un pays où leur vie est en danger. Cette convention a été ratifiée par 145 membres des Nations unies, dont tous les pays de l’Union européenne.]]] -->
-				<!-- 	</li>
-					<li> Est considéré comme <b>“migrant”</b>, toute personne née dans un pays et qui vit dans un autre pour une durée égale ou supérieure à un an, que ce soit par choix, par nécessité ou contrainte. Un “migrant” n’est pas un statut juridique mais une catégorie générale à laquelle appartiennent notamment les réfugiés, mais aussi les étudiants étrangers ou les travailleurs venus d’un autre pays. 
-					</li>
-					<li> Un réfugié est un ancien <b>demandeur d’asile</b> mais tous les demandeurs d’asile ne sont pas reconnus réfugiés (dans ce cas, ils sont qualifiés de “<b>déboutés </b>”). En France, le demandeur d’asile n’a pas le droit de travailler, sauf si l’examen de sa demande dépasse une année. Le statut de réfugié permet, lui, d’obtenir un permis de séjour de dix ans et de travailler normalement. 
-					</li>
-					<li> Contrairement aux réfugiés, les <b>déplacés internes</b> n’ont pas traversé de frontière internationale pour chercher asile dans un autre pays. Même s’ils ont fui pour des raisons similaires à celle des réfugiés (conflit armé, violence généralisée..) les déplacés internes demeurent légalement sous la protection de leur propre gouvernement, constituant parfois lui-même la cause de leur fuite. 
-					</li>
-<!-- Pour les gouvernements, cette distinction est importante. Les pays gèrent les migrants en vertu de leurs propres lois et procédures en matière d’immigration. Les pays gèrent les réfugiés en vertu des normes sur la protection des réfugiés et de l’asile aux réfugiés qui sont définies dans les lois nationales et les lois internationales. Les pays ont des responsabilités précises envers les demandeurs d’asile sur leurs territoires et à leurs frontières.]]]
-				<br>
-<li><b>Déplacé interne </b>: Contrairement aux réfugiés, les déplacés internes n’ont pas traversé de frontière internationale pour chercher asile dans un autre pays. Même s’ils ont fui pour des raisons similaires à celle des réfugiés (conflit armé, violence généralisée..) les déplacés internes demeurent légalement sous la protection de leur propre gouvernement, constituant parfois lui-même la cause de leur fuite. [[[En tant que citoyens, les déplacés internes conservent l’ensemble de leurs droits, dont celui à la protection en vertu des droits humains et des principe du droit international humanitaire.]]] </li> -->
-					<!--  </ul> 
-				</div>
-			</div> -->
-	<!-- Graphe intro Irène -->
-			<h2> Éclairage sur la situation mondiale en un graphique </h2>	
-		<div class="container" style="display:flex;flex-direction:column;">
-			<div style="display:flex;flex-direction:column; text-align: center">
-				<h4> <font color="#24292E"> Une explosion du nombre de populations déracinées dans le monde depuis 15 ans</font> </h4>
-				<br> <font color="#24292E">Depuis 2006, il y a plus de déplacés internes que de réfugiés.</font>
-				<font color="#24292E"> Il y a trois fois plus de demandeurs d'asile depuis 2012. </font>
-				<div id="container" > </div>
-				<div style="display:flex;flex-direction:column; text-align: justify">
-					<font size="-1"><center> Source: UNHCR <br>
-					Cliquez sur la légende pour voir le changement d'échelles. </center> </font>
-<br>
 				</div>		
-			
-			
+				
+<section>			
 			<h2> Focus sur la demande d'asile </h2>
 			<h3> Statut et durée du titre de séjour </h3>
 <div class="container" style="display:flex;justify-content:space-between;">
 	
 <div style="color:#004953;  width: 55%;text-align: justify;text-justify: inter-word;"> <br>
-		Un demandeur d'asile dont la demande est acceptée n'obtient pas nécessairement le statut de réfugié. Il existe deux autres statuts. <br>
+	A l'issue d'une demande d'asile, quatre issues sont possibles : 
+	
+	<ul>
+		<li> La demande est </li>
+		<li>Les personnes reconnues <b style="font-weight:bold ; color: #29AB87" > réfugiées </b> en France 
+			bénéficient d'une carte de résident valable <b style="font-weight:bold ; color: #29AB87" > dix ans</b>. <br> </li> 
+		<li> Le bénéfice de la <b style="font-weight:bold ; color:  #934c05" >  protection subsidiaire </b> est accordé à toute personne dont la situation ne répond pas à la définition du statut de réfugié mais pour laquelle il existe des motifs sérieux et avérés de croire qu'elle courrait dans son pays un risque réel de subir une atteinte grave. 
+		Les bénéficiaires de la protection subsidiaire se voient délivrer une carte de séjour temporaire d'une durée d'<b style="font-weight:bold ; color: #934c05" >un an renouvelable</b>. </li>
+		
+		<li>Le <b style="font-weight:bold ; color:  #E48400" > statut humanitaire </b> peut également être conféré dans des cas de risque d'atteinte grave ou encore en cas 
+		de maladie mais il dépend de la législation nationale et non du droit de l'Union, contrairement aux deux autres statuts. </li>
+	</ul>	
+		
+	<!--	Un demandeur d'asile dont la demande est acceptée n'obtient pas nécessairement le statut de réfugié. Il existe deux autres statuts. <br>
 		<br>
 		Les personnes reconnues <b style="font-weight:bold ; color: #29AB87" > réfugiées </b> en France bénéficient d'une carte de résident valable <b style="font-weight:bold ; color: #29AB87" > dix ans</b>. <br>
 		<br> 
 		Le bénéfice de la <b style="font-weight:bold ; color:  #934c05" >  protection subsidiaire </b> est accordé à toute personne dont la situation ne répond pas à la définition du statut de réfugié mais pour laquelle il existe des motifs sérieux et avérés de croire qu'elle courrait dans son pays un risque réel de subir une atteinte grave. 
+		
 		Les bénéficiaires de la protection subsidiaire se voient délivrer une carte de séjour temporaire d'une durée d'<b style="font-weight:bold ; color: #934c05" >un an renouvelable</b>. <br>
 		<br>
 		Le <b style="font-weight:bold ; color:  #E48400" > statut humanitaire </b> peut également être conféré dans des cas de risque d'atteinte grave ou encore en cas 
-		de maladie mais il dépend de la législation nationale et non du droit de l'Union, contrairement aux deux autres statuts.  
-</div>
+		de maladie mais il dépend de la législation nationale et non du droit de l'Union, contrairement aux deux autres statuts.  -->
+
+		
+		</div>
 <div style="diplay:flex;flex-direction:column; align-self:center;">
 <div> <font color="#24292E"> Décisions en première instance relatives aux demandes d'asile en UE (de ressortissants de pays tiers), 2015 </font> </div>
 	<div id="alienor">
