--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 	A l'issue d'une demande d'asile, quatre issues sont possibles : 
 	
 	<ul>
-		<li> La demande est refusée. </li>
+		<li> La demande est rejetée. </li>
 		<li>Les personnes reconnues <b style="font-weight:bold ; color: #29AB87" > réfugiées </b> en France 
 			bénéficient d'une carte de résident valable <b style="font-weight:bold ; color: #29AB87" > dix ans</b>. <br> </li> 
 		<li> Le bénéfice de la <b style="font-weight:bold ; color:  #934c05" >  protection subsidiaire </b> est accordé à toute personne dont la situation ne répond pas à la définition du statut de réfugié mais pour laquelle il existe des motifs sérieux et avérés de croire qu'elle courrait dans son pays un risque réel de subir une atteinte grave. 
