--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 	
 	<ul>
 		<li> La demande est rejetée. </li>
-		<li>Les personnes reconnues <b style="font-weight:bold ; color: #29AB87" > réfugiées </b> en France 
+		<li> Le statut de <b style="font-weight:bold ; color: #29AB87" > réfugié </b> est reconnu. En France, les réfugiés
 			bénéficient d'une carte de résident valable <b style="font-weight:bold ; color: #29AB87" > dix ans</b>. <br> </li> 
 		<li> Le bénéfice de la <b style="font-weight:bold ; color:  #934c05" >  protection subsidiaire </b> est accordé à toute personne dont la situation ne répond pas à la définition du statut de réfugié mais pour laquelle il existe des motifs sérieux et avérés de croire qu'elle courrait dans son pays un risque réel de subir une atteinte grave. 
 		Les bénéficiaires de la protection subsidiaire se voient délivrer une carte de séjour temporaire d'une durée d'<b style="font-weight:bold ; color: #934c05" >un an renouvelable</b>. </li>
