--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
 		
 		</div>
-<div style="diplay:flex;flex-direction:column; align-self:center;">
+<div style="diplay:flex;flex-direction:column; align-self:center; width=50%">
 <div> <font color="#24292E"> Décisions en première instance relatives aux demandes d'asile en UE (de ressortissants de pays tiers), 2015 </font> </div>
 	<div id="alienor">
 </div>
@@ -246,21 +246,7 @@
 </section> 
 
 
-	<!-- Deuxième partie -->
-		
-		<!-- Banner2 
-			<section id="banner2">
-				<h2>Deuxieme partie</h2>
-				<h3 style="color:white"> Comment l'Europe gère-t-elle les migrations? </h3>
-				<p></p>
-				<ul class="actions2">
-					<li>
-						<a href="#two" class="button big2">Je découvre</a>
-					</li>
-				</ul>
-			</section>
-
-			-->
+	
 		
 	<div class="paraxify intermede-1" style="background-position: center center;"> </div>
 
@@ -276,23 +262,7 @@
 	
 		
 		<div style="color:#004953;  width: 100%;text-align: justify;text-justify: inter-word;"> <br>
-		<ul>
-	<!--
-		<li> En 2015, 1,2 millions de personnes ont demandé l’asile à un Etat membre de l’Union européenne. 
-		Soit plus du double de l’année précédente et la moitié du nombre de réfugiés accueillis par la Turquie en 2015.  </li>
-		<li>Dans les années 1970, 80% des demandeurs d’asile obtenaient le statut de réfugié en Europe. 
-		Aujourd’hui, près de 80% sont déboutés. 
-		Ceci peut s'expliquer par le changement d'approche adopté par les Etats européens, 
-		qui contrairement à aujourd'hui, abordaient plus l’immigration en termes de main d’œuvre, qu'en termes de sécurité. </li>
-		</ul>
-	-->	
-		<!--En 1990, les accords de Dublin ont unifié la politique européenne. 
-		On assiste à la fin des demandes d’asile multiples – asylum shopping – et au respect de la réponse donnée par un autre pays européen.
-		Ces accords ont été renouvelés en 2003 avec Dublin II, fondés sur le principe « one stop, one shop », 
-		obligeant les migrants à demander l’asile dans le premier pays de l’Union où ils ont posé le pied.
-		En conséquence, la plupart des demandeurs d’asile venus d’Asie, du Proche et du Moyen-Orient ont été renvoyés en Grèce,
-		premier pays d’entrée. En 2013, Dublin III a établi qu’un seul Etat membre est « responsable » d’une demande d’asile : 
-		c’est donc l’Etat où le demandeur d’asile est enregistré qui décide de l’attribution du statut. <br> -->
+			
 		</div>
 	</div>
 
